Correções de bugs na API

--- a/notebooks/data_transform.ipynb
+++ b/notebooks/data_transform.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-01T03:35:03.105228Z",
-     "start_time": "2024-10-01T03:35:03.100721Z"
+     "end_time": "2024-10-01T15:36:25.378102Z",
+     "start_time": "2024-10-01T15:36:25.375649Z"
     }
    },
    "source": [
@@ -16,29 +16,42 @@
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder"
    ],
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T03:35:05.158700Z",
-     "start_time": "2024-10-01T03:35:04.728575Z"
+     "end_time": "2024-10-01T15:36:25.976473Z",
+     "start_time": "2024-10-01T15:36:25.974471Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "BASE_DIR = '/home/breno/PycharmProjects/customer-churn-classificator/resources'",
+   "id": "dfec20db1f8eec97",
+   "outputs": [],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-01T15:36:27.324806Z",
+     "start_time": "2024-10-01T15:36:27.126440Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "df = pd.read_csv('C:/Users/Breno/PycharmProjects/customer-churn-classificator/resources/input/customer_churn_dataset.csv')\n",
+    "df = pd.read_csv(f'{BASE_DIR}/input/customer_churn_dataset.csv')\n",
     "df = df.drop('CustomerID', axis=1)"
    ],
    "id": "feeb708e1cfa92d4",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T03:35:07.613512Z",
-     "start_time": "2024-10-01T03:35:07.596866Z"
+     "end_time": "2024-10-01T15:36:52.884311Z",
+     "start_time": "2024-10-01T15:36:52.874417Z"
     }
    },
    "cell_type": "code",
@@ -269,12 +282,12 @@
        "</div>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -285,23 +298,24 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T03:35:34.030908Z",
-     "start_time": "2024-10-01T03:35:33.746427Z"
+     "end_time": "2024-10-01T15:37:17.666184Z",
+     "start_time": "2024-10-01T15:37:17.478965Z"
     }
    },
    "cell_type": "code",
    "source": [
     "categorical_columns = ['Gender', 'Subscription Type', 'Contract Length']\n",
-    "ohe = OneHotEncoder(handle_unknown='ignore', sparse_output=True)\n",
+    "ohe = OneHotEncoder(handle_unknown='ignore', sparse_output=False)\n",
     "df_encoded = ohe.fit_transform(df[categorical_columns])\n",
+    "df_encoded = pd.DataFrame(df_encoded, columns=ohe.get_feature_names_out(categorical_columns))\n",
+    "df = pd.concat([df.drop(columns=categorical_columns), df_encoded], axis=1)\n",
     "\n",
-    "# Salvar o OneHotEncoder usando pickle\n",
-    "with open('C:/Users/Breno/PycharmProjects/customer-churn-classificator/resources/models/one_hot_encoder.pkl', 'wb') as f:\n",
-    "    pickle.dump(ohe, f)"
+    "with open(f'{BASE_DIR}/models/one_hot_encoder.pkl', 'wb') as f:\n",
+    "    pickle.dump(ohe, f)\n"
    ],
-   "id": "2d5dfe8089fe2fa1",
+   "id": "4f5895f210330562",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -310,19 +324,24 @@
    "id": "e10fe477bead72f4"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-01T15:37:21.499473Z",
+     "start_time": "2024-10-01T15:37:21.447739Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "numeric_columns = ['Age', 'Tenure', 'Usage Frequency', 'Support Calls', 'Payment Delay', 'Total Spend', 'Last Interaction']\n",
     "scaler = StandardScaler()\n",
     "df[numeric_columns] = scaler.fit_transform(df[numeric_columns])\n",
     "\n",
-    "with open('C:/Users/Breno/PycharmProjects/customer-churn-classificator/resources/models/standard_scaler.pkl', 'wb') as f:\n",
+    "with open(f'{BASE_DIR}/models/standard_scaler.pkl', 'wb') as f:\n",
     "    pickle.dump(scaler, f)"
    ],
    "id": "c5bd114e3cfa0e38",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -333,23 +352,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-01T03:38:10.380066Z",
-     "start_time": "2024-10-01T03:38:08.118255Z"
+     "end_time": "2024-10-01T15:37:26.526580Z",
+     "start_time": "2024-10-01T15:37:23.457861Z"
     }
    },
    "cell_type": "code",
-   "source": "df.to_csv('C:/Users/Breno/PycharmProjects/customer-churn-classificator/resources/output/prepared_data.csv', index=False)",
+   "source": "df.to_csv(f'{BASE_DIR}/output/prepared_data.csv', index=False)",
    "id": "a4fb7e65842a1e27",
    "outputs": [],
-   "execution_count": 19
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "2baadc2d77cd952c"
+   "execution_count": 17
   }
  ],
  "metadata": {
